# illusion-captcha

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_example.sh
api/: app.py
api/static/: illusion-captcha.js
example/: app.py
example/templates/: forbidden.html  index.html  protected.html
illusion/: BaseIllusion.py  Contrast.py  Delboeuf.py  DelboeufIllusion.py  Ebbinghaus.py  MullerLyer.py  Ponzo.py  RandomIllusion.py  __init__.py
